--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -3,9 +3,10 @@ name: cd
 on:
   push:
     branches:
-      - main
+      - 'main'
+      - 'feature/*'
     tags:
-      - v0.0.*
+      - 'v0.0.*'
 
 
 jobs:
