--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -1,13 +1,13 @@
 name: cd
 
 on:
-  push:
+  pull_request:
+    types:
+      - opened
+      - reopened
+      - synchronize
     branches:
-      - 'main'
-      - 'feature/*'
-    tags:
-      - 'v0.0.*'
-
+      - main
 
 jobs:
 
@@ -17,5 +17,4 @@ jobs:
     steps:
 
       - name: step1
-        run: |
-          env | sort
+        run: echo "cd - step1"
