--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -19,10 +19,10 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
 
-      - name: step1
-        run: echo "cd - step1"
+      - name: Checkout application repository
+        uses: actions/checkout@v2
 
-      - name: step2
+      - name: Step1
         env:
           WORKFLOW_FILE_NAME: 'cd.yaml'
           GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
