--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -25,10 +25,5 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Step1
-        env:
-          WORKFLOW_FILE_NAME: 'cd.yaml'
-          GITHUB_TOKEN: ${{ secrets.MY_GITHUB_TOKEN }}
-        run: ./cancel.py
-
-      - name: Step2
-        run: sleep 61
+        run: |
+          env | grep GITHUB | sort
